--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,12 +1,11 @@
-<table class="w3-table w3-striped w3-bordered">
-	<tr>
-	  <th>Name</th>
-	  <th>More..</th>
-	</tr>
-	<% @categories.each do |t| %>
-		<tr>
-		  <td><%= t.name %></td>
-		  <td><%= link_to "Explore", category_path(t) %></td>
-		</tr>
-	<% end %>
-</table>
+
+<!-- First Photo Grid-->
+	<div class="w3-row-padding w3-padding-16 w3-center" id="food">
+		<% @categories.each do |t| %>
+			<div class="w3-quarter">
+				<%= image_tag t.image, :style => "width:100%" %>
+				<h3><%= t.name %></h3>
+				<td><%= link_to "Explore", category_path(t) %></td>
+			</div>
+		<% end %>
+	</div>
