--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,13 +3,43 @@
   <head>
     <title>SeeraFastFood</title>
     <%= csrf_meta_tags %>
-
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karma">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
 	<%= stylesheet_link_tag "filename" %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
+
+	<!-- Sidebar (hidden by default) -->
+	<nav class="w3-sidebar w3-bar-block w3-card-2 w3-top w3-xlarge w3-animate-left" style="display:none;z-index:2;width:40%;min-width:300px" id="mySidebar">
+	  <a href="javascript:void(0)" onclick="w3_close()"
+	  class="w3-bar-item w3-button">Close Menu</a>
+		<%= link_to "Rice", category_path(1), :class => "w3-bar-item w3-button" %> 
+		<%= link_to "Noodes", category_path(2), :class => "w3-bar-item w3-button" %>
+		<%= link_to "Pasta", category_path(3), :class => "w3-bar-item w3-button" %>
+		<%= link_to "Salad", category_path(4), :class => "w3-bar-item w3-button" %>
+	</nav>
+
+	<!-- Top menu -->
+	<div class="w3-top">
+	  <div class="w3-white w3-xlarge" style="max-width:1200px;margin:auto">
+		<div class="w3-button w3-padding-16 w3-left" onclick="w3_open()">☰</div>
+		<div class="w3-right w3-padding-16">
+			<% if current_user %>
+				<%= current_user.first_name %>
+				<%= link_to "Log out", logout_path, method: "delete" %>
+			<% else %>
+				<%= link_to "Login", login_path %>
+				<%= link_to "Signup", signup_path %>
+			<% end %>
+		</div>
+		<div class="w3-center w3-padding-16">Seera Fast Food</div>
+	  </div>
+	</div>
+  
+<!-- !PAGE CONTENT! -->
+<div class="w3-main w3-content w3-padding" style="max-width:1200px;margin-top:100px">
     <%= yield %>
   </body>
 </html>
