--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,9 +1,24 @@
 <h2>Create a New Item</h2>
-<%= form_for @item do |f| %>
-  <%= f.text_field :name, :id => "title" %>Title</br>
-  <%= f.text_area :description, :id => "description" %>Description</br>
-  <%= f.text_field :price, :id => "price" %>Price</br>
-  <%= f.text_field :category_id, :id => "category_id" %>Category</br>
-  <%= f.submit "Save Item" %>
+<%= form_for(@item) do |f| %>
+	<div class="w3-row-padding">
+		<div class="w3-col">
+			<%= f.label :image %>
+			<%= f.file_field :image, :size => "130x90", :class => "w3-input w3-border" %>
+		</div><br>
+		<div class="w3-col">
+			<%= f.label :name %>
+			<%= f.text_field :name, :class => "w3-input w3-border" %>
+		</div><br>
+		<div class="w3-col">
+			<%= f.label :price %>
+			<%= f.text_field :price, :class => "w3-input w3-border" %>
+		</div><br>
+		<div class="w3-col">
+			<%= f.label :category %>
+			<%= f.collection_select(:category_id, Category.all, :id, :name, {}, { :class => "w3-input w3-border", :style => "display:block;" }) %>
+		</div><br>
+		<div class="w3-col w3-center" >
+			<%= f.submit "Create", :class => "w3-button w3-block w3-red" %>
+		</div>
+	</div>
 <% end %>
-
