--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,25 +1,16 @@
 <table class="w3-table w3-striped w3-bordered">
 	<tr>
-	  <th>Name</th>
-	  <th>Description</th>
-	  <th>Price</th>
-	  <% if current_user && current_user.admin? %> 
-		    <th>Edit</th>
-		<% end %>
-		</td>
-	 
+		<th>Image</th>
+		<th>Name</th>
+		<th>Price</th>
+		<th>Edit</th>
 	</tr>
 	
 	<tr>
+	  <td><%= image_tag @item.image, :style => "width:20%" %></td>
 	  <td><%= @item.name %></td>
-	  <td><%= @item.description %></td>
 	  <td><%= @item.price %></td>
-	  <td>
-	  <% if current_user && current_user.admin? %> 
-		   <%= link_to "Edit Item", edit_item_path(@item) %>
-		<% end %>
-		</td>
-	 
+	  <td><%= link_to "Edit Item", edit_item_path(@item) %></td>
 	</tr>
 	
 </table>
