--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,9 +1,25 @@
 <h1> Listing of all users </h1><hr><hr>
-<% @users.each do |user| %>
-  <h2>Name: <%= user.first_name %>&nbsp <%= user.last_name %></h2>
-  <h5><%= user.email %></h5>
-  <h5>Phone Number: <%= user.phone %></h5>
-  <h5>Address: <%= user.address %></h5>
-  <h5> Total purchases: <%= user.total_spent %> </h5>
-  <%= link_to 'View All Orders For This User', orders_path(user) %></br><hr>
-<% end %>
+<table class="w3-table w3-striped w3-bordered">
+	<tr>
+	  <th>Name</th>
+	  <th>Email</th>
+	  <th>Phone</th>
+	  <th>Address</th>
+	  <th>Total Purchase</th>
+	  <th>Orders</th>
+	</tr>
+	<% @users.each do |user| %>	
+		<tr>
+		  <td><%= user.first_name %>&nbsp <%= user.last_name %></td>
+		  <td><%= user.email %></td>
+		  <td><%= user.phone %></td>
+		  <td><%= user.address %></td>
+		  <td><%= user.total_spent %></td>
+		  <td><%= link_to 'View', orders_path(user) %> </td>
+		  <td><%= link_to "Edit User", edit_user_path(user) %></td>
+		</tr>
+	<% end %>
+	 
+	
+	
+</table>
