--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -9,9 +9,8 @@
      <h2><p>order id: <%= order.id %></p></h2>
       <p><h3>order items:</h3> 
         <% order.order_items.each do |order_item| %></p>
-        <%= image_tag "items_#{order_item.item_id}.jpg", class: "item_img" %>
+        <%= image_tag order_item.item.image(:thumb) %>
         <p><b>name: </b><%= order_item.item.name %></p>
-        <p><b>description: </b><%= order_item.item.description %></p>
         <p><b>price: </b><%= order_item.item.price %></p>
         <p><b>quantity: </b><%= order_item.quantity %> </br>
       <% end %>
