--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,2 +1,19 @@
-<h1>Categories#edit</h1>
-<p>Find me in app/views/categories/edit.html.erb</p>
+
+
+
+<div class="w3-container w3-theme">
+  <h2><%= @category.name %></h2>
+</div>
+
+<%= form_for @category, html: { multipart: true, :class => "w3-container"} do |f|   %>
+  <p>
+	  <%= f.label :image %>
+	 <%= f.file_field :image, :size => "130x90", :class => "w3-input w3-border" %>
+  </p>
+  <p>
+	  <%= f.label :name %>
+	  <%= f.text_field :name, :class => "w3-input w3-border" %>
+  </p>
+  	<%= f.submit "Update", :class => "w3-button w3-block w3-red" %>
+  
+<% end %>
