--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,28 +1,31 @@
-<h2 class="w3-center"><%= @category.name %></h2>
+<div class="w3-container">
+<h2><%= @category.name %> </h2>
+	<% if current_user && current_user.admin? %>
+	  	<p><%= link_to "Edit Category", edit_category_path(@category) %> </p>
+	  	<% end %>
+ 
 
-	<!-- First Photo Grid-->
-	<div class="w3-row-padding w3-padding-16 w3-center" id="food">
-		<% @items.each do |i| %>
-			<div class="w3-quarter">
-				<%= image_tag i.image, :style => "width:100%" %>
-				<h3><%= i.name %></h3>
-				<p><%= i.description %></p>
-				<p><%= i.price %></p>
-				<select>
-				  <option value="1">1</option>
-				  <option value="2">2</option>
-				  <option value="3">3</option>
-				  <option value="4">4</option>
-				  <option value="5">5</option>
-				  <option value="6">6</option>
-				</select>
-				<button class="w3-button w3-large w3-circle w3-black">+</button> <br /><br />
-				<% if current_user && current_user.admin? %> 
-					<%= link_to "More..", item_path(i) %>
-				<% end %>
-			</div>
-		<% end %>
-	</div>
-   
+  <% @category.items.each do |item| %>
+    <div class="w3-quarter w3-container w3-margin-bottom">
+     <div class="w3-container w3-white">
+        <h3 class="w3-center"><%= item.name %></h3>
+      </div>
+     <%= image_tag item.image, :style => "width:100%", :class => "w3-hover-opacity" %> 
+      <p class="w3-center">price: Mrf &nbsp<%= item.price %></p>
+          <%= form_for item.order_items.new do |f| %>
+            <%= f.hidden_field :item_id %>
+            <p class="w3-center"><%= f.submit "Add to Cart" %>
+          <select id="quantity_<%= dom_id(item) %>" name="quantity">
+          <option selected="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+          <option value="6">6</option>
+          </select> <label for="quantity_<%= dom_id(item) %>"></label><br/>
+          <% end %>
+          </p>
+    	</div>
+   <% end %>
 
-
+</div>
