--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,3 +1,4 @@
 <%= link_to 'Orders', orders_path %></br>
 <%= link_to 'Users', users_path %></br>
-<%= link_to 'Items', items_path %>
+<%= link_to 'Items', items_path %></br>
+<%= link_to 'Categories', categories_admin_index_path %>
