--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,4 +1,6 @@
-<%= link_to 'Orders', orders_path %></br>
-<%= link_to 'Users', users_path %></br>
-<%= link_to 'Items', items_path %></br>
-<%= link_to 'Categories', categories_admin_index_path %>
+<div class="w3-container">
+<p><%= link_to 'Orders', orders_path %></p>
+<p><%= link_to 'Users', users_path %></p>
+<p><%= link_to 'Items', items_path %></p>
+<p><%= link_to 'Categories', categories_admin_index_path %></p>
+</div>
