--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
   <head>
     <title>SeeraFastFood</title>
     <%= csrf_meta_tags %>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karma">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
 	<%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
@@ -27,6 +28,8 @@
 	<div class="w3-top">
 	  <div class="w3-white w3-xlarge" style="max-width:1200px;margin:auto">
 		<div class="w3-button w3-padding-16 w3-left" onclick="w3_open()">☰</div>
+		
+        <!-- login or logout -->
 		<div class="w3-right w3-padding-16">
 			<% if current_user %>
 				<%= current_user.first_name %>
@@ -36,15 +39,26 @@
 				<%= link_to "Signup", signup_path, style: "text-decoration: none" %>
 			<% end %>
 		</div>
-		<div class="w3-center w3-padding-16"><%= link_to "Seera Fast Food", categories_path, style: "text-decoration: none" %></div>
-	  </div>
+		<!-- cart -->
+		<div class="w3-right w3-padding-16">
+			<% if @order && @order.total > 0 %>
+	          <%= link_to "Cart: Mrf #{@order.total}", order_path(@order), class: "see_cart" %>
+	        <% elsif current_user %>
+	          <%= link_to " Cart: empty", orders_path, class: "see_cart" %>
+	        <% else %>
+	          
+	        <% end %>
+        </div>
+		<div class="w3-center w3-padding-16" ><%= link_to "Seera Fast Food", categories_path, style: "text-decoration: none", class: "w3-text-red" %>
+		</div>
 	  
-	  	<div class="w3-center w3-padding-16">
+	  
+	  	<div class="w3-center w3-padding-16 w3-medium w3-text-red">
 			<%- if flash.notice %>
 			  <p><%= flash.notice %></p>
 			<% end %>
 		</div>
-	  
+	  </div>
 	</div>
  
       
