--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,7 +1,7 @@
 <% if current_user.admin? %>
 <h1>All orders</h1>
 <% else %>
-<h1>All orders for <%= current_user.first_name%> &nbsp<%= current_user.last_name%></h1>
+<h1>All orders for <%= current_user.first_name%> &nbsp <%= current_user.last_name%></h1>
 <% end %>
 <ul id="orders">
   <% @orders.each do |order| %>
@@ -15,7 +15,7 @@
         <p><b>quantity: </b><%= order_item.quantity %> </br>
       <% end %>
       <hr>
-        <p><b> Order Total: </b><%= number_to_currency(order.total) %>
+        <p><b> Order Total: Mrf</b><%= (order.total) %></p>
 
       <p>order completed at: <%= order.updated_at %></p>
     </div>
@@ -23,4 +23,29 @@
     <hr>
   <% end %>
 </ul>
-<%= link_to "See Menu", categories_path, class: "see_menu" %>
+<%= link_to "See Menu", categories_path %>
+
+<table class="w3-table w3-striped w3-bordered">
+
+ <tr>
+      <th>Order ID</th>
+      <th>Order Total</th>
+      <th>Status</th>
+      <th>Updated Time</th>
+      <th>Created Time</th>
+      <th>View Detail</th>
+      
+    </tr>
+  <% @orders.each do |order| %>   
+    <% order.order_items.each do |order_item| %>
+      <tr>
+        <td><%= order.id %></td>
+        <td><%= (order.total) %></td>
+        <td><%= order.status %></td>
+        <td><%= order.updated_at.to_s %></td>
+        <td><%= order.created_at.to_s %></td>
+        <td><%= link_to "View", order_path(order.id) %></td>
+      </tr>
+    <% end %>
+  <% end %>
+</table>
