--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,33 +1,31 @@
-  <ul>
-    <% @categories.each do |category| %>
-     <div class="w3-row-padding w3-padding-16">
-	     <h1><%= category.name %></h1>
-      
-        <% category.items.each do |item| %>
-		
-		<div class="w3-quarter w3-center">
-		   <div id="<%= dom_id(item) %>">
-          <p><%= item.name %></p>
-          <%= image_tag item.image.url, :style => "width:100%" %>
-          <p>price: Mrf &nbsp<%= item.price %></p>
-          <%= form_for item.order_items.new do |f| %>
-            <%= f.hidden_field :item_id %>
-            <%= f.submit "Add to Cart" %>
-          <select id="quantity_<%= dom_id(item) %>" name="quantity">
-          <option selected="1">1</option>
-          <option value="2">2</option>
-          <option value="3">3</option>
-          <option value="4">4</option>
-          <option value="5">5</option>
-          <option value="6">6</option>
-          </select> <label for="quantity_<%= dom_id(item) %>"></label><br/>
-          <% end %>
-        </div>
-		</div>
-        <% end %>
+
+<% @categories.each do |category| %>
+ <div class="w3-row-padding w3-padding-16">
+   <h1><%= category.name %></h1>
+    <% category.items.each do |item| %>
+      <div class="w3-quarter w3-center">
+         <div id="<%= dom_id(item) %>">
+            <p><%= item.name %></p>
+            <%= image_tag item.image.url, :style => "width:100%" %>
+            <p>price: Mrf &nbsp<%= item.price %></p>
+            <%= form_for item.order_items.new do |f| %>
+              <%= f.hidden_field :item_id %>
+              <%= f.submit "Add to cart", class: "w3-button w3-red" %>
+            <select id="quantity_<%= dom_id(item) %>" name="quantity">
+            <option selected="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
+            </select> <label for="quantity_<%= dom_id(item) %>"></label><br/>
+            <% end %>
+          </div>
       </div>
     <% end %>
-  </ul>
+  </div>
+<% end %>
+
 
 
 
