--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,8 @@
 	<%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+  <body style="min-height: 560px">
+
 
 	<!-- Sidebar (hidden by default) -->
 	<nav class="w3-sidebar w3-bar-block w3-card-2 w3-top w3-xlarge w3-animate-left" style="display:none;z-index:2;width:40%;min-width:300px" id="mySidebar">
@@ -32,41 +33,71 @@
         <!-- login or logout -->
 		<div class="w3-right w3-padding-16">
 			<% if current_user %>
-				<%= current_user.first_name %>
-				<%= link_to "Log out", session_path, method: "delete", style: "text-decoration: none"%>
+				<%= link_to current_user.first_name , user_path(current_user), style: "text-decoration: none;", class: "w3-hover-opacity w3-hover-text-red " %>
+				<%= link_to "Log out", session_path, method: "delete", style: "text-decoration: none; border-left: thin solid #ff0000;", class: "w3-hover-opacity w3-hover-text-red " %>
 			<% else %>
-				<%= link_to "Login", new_session_path, style: "text-decoration: none" %>
-				<%= link_to "Signup", signup_path, style: "text-decoration: none" %>
+				<%= link_to "Login", new_session_path, style: "text-decoration: none; ", class: "w3-hover-opacity w3-hover-text-red " %>
+				<%= link_to "Signup", signup_path, style: "text-decoration: none; border-left: thin solid #ff0000;", class: "w3-hover-opacity w3-hover-text-red " %>
 			<% end %>
 		</div>
 		<!-- cart -->
 		<div class="w3-right w3-padding-16">
-			<% if @order && @order.total > 0 %>
-	          <%= link_to "Cart: Mrf #{@order.total}", order_path(@order), class: "see_cart" %>
-	        <% elsif current_user %>
-	          <%= link_to " Cart: empty", order_path(current_order), class: "see_cart" %>
+			<% if @order && @order.total > 0 && !current_user.admin? %>
+	          <%= link_to "Cart: Mrf #{@order.total}", order_path(@order), style: "text-decoration: none; border-right: thin solid #ff0000;", class: "w3-hover-opacity w3-hover-text-red " %>
+	        <% elsif current_user && !current_user.admin? %>
+	          <%= link_to " Cart: empty " , order_path(current_order), style: "text-decoration: none; border-right: thin solid #ff0000;", class: "w3-hover-opacity w3-hover-text-red " %>
 	        <% else %>
 	          
 	        <% end %>
         </div>
-        </div>
-		<div class="w3-center w3-padding-16" ><%= link_to "Seera Fast Food", categories_path, style: "text-decoration: none", class: "w3-hover-opacity w3-hover-text-red w3-text-red" %>
+        
+		<div class="w3-center w3-padding-16" ><%= link_to "Seera Fast Food", categories_path, style: "text-decoration: none", class: "w3-hover-opacity w3-hover-text-red " %>
 		</div>
-	  
-	  
-	  	<div class="w3-center w3-padding-16 w3-medium w3-text-red">
+	  	
 			<%- if flash.notice %>
-			  <p><%= flash.notice %></p>
+			  <p class="w3-center w3-padding-16 w3-medium w3-text-red"><%= flash.notice %>&nbsp</p>
 			<% end %>
+		
+	  	
+	  	
 		</div>
 	  </div>
-	 </div>
-	</div>
+	
+	
  
       
 <!-- !PAGE CONTENT! -->
 <div class="w3-main w3-content w3-padding" style="max-width:1200px;margin-top:100px">
+	
 		
 	<%= yield %>
+</div>
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<footer  class="w3-center w3-full w3-container">
+	
+	 	<a href="https://www.facebook.com/seera.fast.food/"> <img src= "/system/fb.png" width="40" height="40" alt="Seera Facebook"> </a> &nbsp
+
+	 	<a href="https://twitter.com/seerafriedchckn?lang=en"><img src= "/system/twitter.png" width="40" height="40" alt="Seera Twitter"> </a> &nbsp
+	 	
+	 	<a href="https:/instagram.com/seeramv?lang=en"><img src= "/system/insta.png" width="40" height="40" alt="Seera Instagram"></a>
+	 	
+
+ 		<p>Seera Fast Food Maldives Pvt. Ltd.</p>
+	<p>AlikilegefaanuMagu, Malé</p>
+      <p>Phone:   332-5913</p>
+
+ 	</div>
+</footer>
   </body>
 </html>
