--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,29 +1,9 @@
 <% if current_user.admin? %>
 <h1>All orders</h1>
 <% else %>
-<h1>All orders for <%= current_user.first_name%> &nbsp <%= current_user.last_name%></h1>
+<h1>All orders for <%= current_user.first_name%> <%= current_user.last_name%></h1>
 <% end %>
-<ul id="orders">
-  <% @orders.each do |order| %>
-    <div id="<%= dom_id(order) %>">
-     <h2><p>order id: <%= order.id %></p></h2>
-      <p><h3>order items:</h3> 
-        <% order.order_items.each do |order_item| %></p>
-        <%= image_tag order_item.item.image(:thumb) %>
-        <p><b>name: </b><%= order_item.item.name %></p>
-        <p><b>price: </b><%= order_item.item.price %></p>
-        <p><b>quantity: </b><%= order_item.quantity %> </br>
-      <% end %>
-      <hr>
-        <p><b> Order Total: Mrf</b><%= (order.total) %></p>
 
-      <p>order completed at: <%= order.updated_at %></p>
-    </div>
-    <hr>
-    <hr>
-  <% end %>
-</ul>
-<%= link_to "See Menu", categories_path %>
 
 <table class="w3-table w3-striped w3-bordered">
 
@@ -33,19 +13,27 @@
       <th>Status</th>
       <th>Updated Time</th>
       <th>Created Time</th>
-      <th>View Detail</th>
+      <th>View</th>
+      <% if current_user && current_user.admin? %>
+       <th>Update</th>
+      <% end %>
       
     </tr>
   <% @orders.each do |order| %>   
-    <% order.order_items.each do |order_item| %>
+    
       <tr>
         <td><%= order.id %></td>
-        <td><%= (order.total) %></td>
+        <td><%= order.total %></td>
         <td><%= order.status %></td>
         <td><%= order.updated_at.to_s %></td>
         <td><%= order.created_at.to_s %></td>
-        <td><%= link_to "View", order_path(order.id) %></td>
+        <td><%= link_to "View", edit_order_path(order.id) %></td>
+        <% if current_user && current_user.admin? %>
+          <td><%= link_to "Update", order_path(order.id) %></td>
+        <% end %>
       </tr>
-    <% end %>
+    
   <% end %>
 </table>
+<br>
+<%= link_to "Back to Menu", categories_path , class: "w3-button w3-red"%>
