--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,15 +1,7 @@
 <h1>About Us</h1>
 
-<h5>Who We Are</h5>
-<p>Sed et posuere velit. Nam ornare metus risus, ac feugiat sem dapibus vitae.</br>
-  Sed aliquet justo a lorem consectetur vulputate a sed lacus. Cras vulputate enim magna, </br>
-  id viverra tortor aliquam sit amet. Nullam porta, enim vitae vulputate dictum. Metus est </br>
-  cursus quam, varius interdum mauris justo sed sapien. Integer tristique orci diam, nec </br>
-  pulvinar nulla posuere quis. Mauris congue ante sit amet nisl pretium pretium.</p>
+<h5>Seera Fast Food Maldives Pvt. Ltd</h5>
+<p>Seera has been in service since June 12th 1994, learning and growing from experience to serve our beloved customers better everyday. Seera chicken has been and still remains as one of the most famous products among our customer, marinated in a special blend and comes in the color red.</p>
 
 
-<h5>Let's Chat</h5>
-<p>call: 555.123.4567  email: flying_sugar@example.com</p></br>
-<p>1234 Any Street   Any Town, Colorado   81234<p>
 
-</br>
